뷰 개발 - 레이아웃

--- a/src/main/resources/templates/admin/page-table.html
+++ b/src/main/resources/templates/admin/page-table.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<div th:replace="~{admin/fragments/fragment-head :: head}"></div>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" th:replace="~{admin/layouts/layout-admin :: layout(~{::main})}">
 <body>
 
   <!-- ======= Header ======= -->
@@ -748,7 +747,6 @@
                 </tbody>
               </table>
               <!-- End Table with stripped rows -->
-
             </div>
           </div>
 
@@ -757,12 +755,6 @@
     </section>
 
   </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <div th:replace="~{admin/fragments/fragment-footer :: footer}"></div>
-  <div th:replace="~{admin/fragments/fragment-foot :: foot}"></div>
-  <div th:replace="~{admin/fragments/fragment-script-util :: util}"></div>
-
 </body>
 
 </html>
