뷰 개발 - 테이블 페이지

--- a/src/main/resources/templates/admin/layouts/layout-admin.html
+++ b/src/main/resources/templates/admin/layouts/layout-admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" th:fragments="layout(content)">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)">
 <div th:replace="~{admin/fragments/fragment-head :: head}"></div>
 <body>
 
