뷰 개발 - 테이블 페이지(Modal Form)

--- a/src/main/resources/templates/admin/page-table.html
+++ b/src/main/resources/templates/admin/page-table.html
@@ -10,6 +10,7 @@
     <div th:replace="~{admin/fragments/fragment-datatable :: datatable(${table})}"></div>
     <th:block th:if="${hasDetails}">
       <div th:replace="~{admin/fragments/fragment-datatable :: datatable(${detailTable})}"></div>
+      <div th:replace="~{admin/fragments/fragment-modal-form :: modalForm(${formElements})}"></div>
     </th:block>
 
   </main><!-- End #main -->
