--- a/src/main/resources/templates/admin/fragments/fragment-foot.html
+++ b/src/main/resources/templates/admin/fragments/fragment-foot.html
@@ -13,8 +13,8 @@
             th:src="@{/assets/vendor/chart.js/chart.umd.js}"></script>
     <script src="assets/vendor/echarts/echarts.min.js"
             th:src="@{/assets/vendor/echarts/echarts.min.js}"></script>
-    <script src="assets/vendor/quill/quill.min.js"
-            th:src="@{/assets/vendor/quill/quill.min.js}"></script>
+    <script src="assets/vendor/quill/quill.js"
+            th:src="@{/assets/vendor/quill/quill.js}"></script>
     <script src="assets/vendor/simple-datatables/simple-datatables.js"
             th:src="@{/assets/vendor/simple-datatables/simple-datatables.js}"></script>
     <script src="assets/vendor/tinymce/tinymce.min.js"
