--- a/src/main/resources/templates/admin/fragments/fragment-sidebar.html
+++ b/src/main/resources/templates/admin/fragments/fragment-sidebar.html
@@ -11,14 +11,16 @@
         </li><!-- End Dashboard Nav -->
         <li class="nav-heading">Pages</li>
         <li class="nav-item" th:each="menu : ${menus}">
-            <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#" th:attr="data-bs-target='#'+${#strings.toLowerCase(menu.name)}+'-nav'">
-                <i class="bi bi-layout-text-window-reverse"></i>
-                <span th:text="${menu.name}">Tables</span><i class="bi bi-chevron-down ms-auto"></i>
+            <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse"
+               href="#" th:attr="data-bs-target='#'+${#strings.toLowerCase(menu.name)}+'-nav'">
+                <i class="bi bi-layout-text-window-reverse"></i><span
+                    th:text="${menu.name}">Tables</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="tables-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav"
                 th:classappend="${menu.name == menuName} ? 'show'" th:id="${#strings.toLowerCase(menu.name)}+'-nav'">
                 <li th:each="page : ${menu.pages}">
-                    <a href="page-table.html" th:classappend="${page.name == pageName} ? 'active'" th:href="${page.url}">
+                    <a href="page-table.html" th:classappend="${page.name == pageName} ? 'active'"
+                       th:href="${page.url}">
                         <i class="bi bi-circle"></i><span th:text="${page.name}">Data Tables</span>
                     </a>
                 </li>
