--- a/src/main/resources/templates/presentation/fragments/fragment-card-experience.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-card-experience.html
@@ -12,7 +12,7 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="lead fw-bolder" th:text="${experience.title}">Web Developer</div>
-                    <div class="small" th:each="detail : #{experience.details}" th:text="|* ${detail}|">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                    <div class="small" th:each="detail : ${experience.details}" th:text="|* ${detail}|">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                 </div>
             </div>
         </div>
