--- a/src/main/resources/templates/admin/fragments/fragment-card-visitors.html
+++ b/src/main/resources/templates/admin/fragments/fragment-card-visitors.html
@@ -9,7 +9,7 @@
             <div class="d-flex align-items-center">
                 <div class="card-icon rounded-circle d-flex align-items-center justify-content-center"
                     th:style="|color: ${visitor.color}; background: ${visitor.background};|">
-                    <i class="bi bi-cart"></i>
+                    <i class="bi bi-people"></i>
                 </div>
                 <div class="ps-3">
                     <h6 th:text="${visitor.count}">145</h6>
