--- a/src/main/resources/templates/presentation/fragments/fragment-card-project.html
+++ b/src/main/resources/templates/presentation/fragments/fragment-card-project.html
@@ -16,7 +16,7 @@
                     <p></p>
                     <th:block th:each="detail : ${project.details}">
                         <div class="small" th:if="${#strings.isEmpty(detail.url)}" th:text="|* ${detail.content}|">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
-                        <a class="small" target="_black" th:unless="${#strings.isEmpty(detail.url)}" th:text="|* ${detail.content}|" th:href="${detail.url}">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                        <div><a class="small" target="_black" th:unless="${#strings.isEmpty(detail.url)}" th:text="|* ${detail.content}|" th:href="${detail.url}">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a></div>
                     </th:block>
                 </div>
             </div>
