--- a/src/main/resources/templates/presentation/index.html
+++ b/src/main/resources/templates/presentation/index.html
@@ -10,7 +10,7 @@
                         <div class="text-center text-xxl-start">
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Java &middot; SpringBoot &middot; Oracle</div></div>
                             <div class="fs-3 fw-light text-muted">안녕하세요</div>
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">개발하는 고양이 <br/> 권예린입니다.</span></h1>
+                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">스스로의 발전을 위해 노력하는 <br/> 권예린입니다.</span></h1>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume">Resume</a>
                                 <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects">Projects</a>
